# dict-to-anki

./: Cargo.toml
src/: errors.rs  main.rs
