[package]
name = "longman-to-anki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.8"
tokio = { version = "1.15.0", features = ["full"] }
thiserror = "1.0"
scraper = "0.12.0"
genanki-rs = "0.1.2"